# pre_rag42_annotator

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yaml  bug_report_v2.yaml  dev_issue_report.yaml  dev_reference.yaml  feature_request_v2.yaml  improve_docs_v1.yaml
.github/workflows/: formatting.yml
app/: test.py  test_isort.py  wrong-1.py
