[tool.poetry]
name = "pre-rag42-annotator"
version = "0.1.0"
description = ""
authors = ["CalMaru <cal@42maru.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.1"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
